Add BuildingSpec to the Help generator
Changes:
- Create a BuildingGenerator to process BuildingSpec class
- Add a building-details mustache template
- Rename the BuildingSpec buildingType property to name to be consistent
- BuildingConfig optimise the power/heat source XML parsing
- Constructiononfig optimise the lookup of BuildingSpec
- Correct missing building package

Part of #1260